--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -1,7 +1,9 @@
 menu.cabinet=Cabinet
 menu.cards=Cards
+menu.users=Users
 menu.leave=Leave
 label.login=Login
 label.email=Email
 label.status=Status
+label.role=Role
 
