--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -2,8 +2,65 @@ menu.cabinet=Cabinet
 menu.cards=Cards
 menu.users=Users
 menu.leave=Leave
+login.enter=Enter
 label.login=Login
+label.login.spec=(at least 3 letters of the Latin alphabet or symbols: '-', '_')
 label.email=Email
 label.status=Status
 label.role=Role
+label.password=Password
+label.password.repeat=Repeat password
+signUp.match=matching
+signUp.notmatch=not matching
+signUp.createAccount=Create account
+signUp.alreadyHaveAccount=Already have an account?
+signUp.title=Sign up
+signUP.signIn=Sign in
+user.status.blocked=Blocked
+user.status.active=Active
+card.status.blocked=Blocked
+card.status.active=Active
+card.status.unblockRequest=Unblock request sent
+card.name=Card name
+card.number=Number
+card.balance=Balance
+card.date=Expiration date
+card.status.block=Block card
+card.status.unblock=Unblock card
+card.status.reqSent=Unblock request is sent
+card.topUpBal=Top up balance
+card.topUp=Top up
+card.add=Add a new card
+label.add=Add
+card.amount=Amount
+header.inOut=In/Out
+header.from=Number from
+header.to=Number to
+header.date=Date
+payment.in=incoming
+payment.out=outgoing
+payment.status.sent=Sent
+payment.status.prep=Prepared
+payment.commit=Commit
+label.makePayment=Make a payment
+payment.prepare=Prepare payment
+payment.sent=Send payment
+page.login=Login page
+page.Cabinet=Cabinet
+page.card=Card page
+user.block=Block user
+user.unblock=Unblock user
+role.admin=Administrator
+role.user=User
+lang.en=English
+lang.ru=Russian
+message.invalidCred=The credentials you are using are invalid
+message.invalidPass=Invalid password
+message.invalidEmail=Invalid email
+message.invalidLogin=Invalid login
+message.difPass=Passwords are different
+message.loginEx=This login already exists
+message.userCreate=User is successfully created!
+message.cannotCreateUser=ERROR: Cannot create user
+message.cannotChangeUserStatus=ERROR: Cannot change user status
 
