--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -30,7 +30,8 @@ card.status.unblock=Unblock card
 card.status.reqSent=Unblock request is sent
 card.topUpBal=Top up balance
 card.topUp=Top up
-card.add=Add a new card
+card.add=Add card
+card.create=Create a new card
 label.add=Add
 card.amount=Amount
 header.inOut=In/Out
@@ -62,5 +63,30 @@ message.difPass=Passwords are different
 message.loginEx=This login already exists
 message.userCreate=User is successfully created!
 message.cannotCreateUser=ERROR: Cannot create user
-message.cannotChangeUserStatus=ERROR: Cannot change user status
-
+message.cannotChangeUserStatus=ERROR: cannot change user status
+message.cannotChangeCardStatus=ERROR: cannot change card status
+message.haveNoCard=You haven't this card
+message.cannotMakePayment=ERROR: cannot make payment
+message.haveNoMoney=You don't have enough money on your card
+message.transactionSuccess=The transaction is made
+message.success=Success
+message.noCommand=No such command
+message.cannotObtainCardInfo=Cannot obtain card info
+message.cardBlocked=This card is blocked
+message.invNumber=This card number doesn't exist
+message.wrongData=Wrong CVV or PIN or expiration date
+message.numberExists=This card number already exists
+message.invAmount=Invalid amount
+message.anotherCard=Enter another card
+message.paymentPrep=Payment is prepared
+message.invalidCardName=Invalid card name
+message.invalidExpDate=Invalid expiration date
+message.invalidCardNumber=Invalid card number
+message.cardAdded=Card is successfully added
+message.cannotAddCard=ERROR: Cannot add card
+message.invalidCVV=Invalid CVV
+message.maxAmount=Maximum amount
+message.cannotTopUp=Cannot top up
+message.topUpSuccess=Your card is replenished
+message.unknownErr=Unknown error
+message.noPermission=You do not have permission to access the requested resource
