--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -43,6 +43,7 @@ payment.out=outgoing
 payment.status.sent=Sent
 payment.status.prep=Prepared
 payment.commit=Commit
+payment.cancel=Cancel
 label.makePayment=Make a payment
 payment.prepare=Prepare payment
 payment.sent=Send payment
@@ -90,3 +91,5 @@ message.cannotTopUp=Cannot top up
 message.topUpSuccess=Your card is replenished
 message.unknownErr=Unknown error
 message.noPermission=You do not have permission to access the requested resource
+message.cannotCancelPay=Cannot cancel payment
+message.cancelSuccess=Payment is canceled
