--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -22,6 +22,7 @@ card.status.blocked=Blocked
 card.status.active=Active
 card.status.unblockRequest=Unblock request sent
 card.name=Card name
+card.changeName=Change card name
 card.number=Number
 card.balance=Balance
 card.date=Expiration date
@@ -33,6 +34,7 @@ card.topUp=Top up
 card.add=Add card
 card.create=Create a new card
 label.add=Add
+label.change=Change
 card.amount=Amount
 header.inOut=In/Out
 header.from=Number from
@@ -81,6 +83,7 @@ message.invAmount=Invalid amount
 message.anotherCard=Enter another card
 message.paymentPrep=Payment is prepared
 message.invalidCardName=Invalid card name
+message.cannotChangeCardName=Cannot change card name
 message.invalidExpDate=Invalid expiration date
 message.invalidCardNumber=Invalid card number
 message.cardAdded=Card is successfully added
@@ -93,3 +96,4 @@ message.unknownErr=Unknown error
 message.noPermission=You do not have permission to access the requested resource
 message.cannotCancelPay=Cannot cancel payment
 message.cancelSuccess=Payment is canceled
+label.card.newName=New card name
