--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -97,3 +97,4 @@ message.noPermission=You do not have permission to access the requested resource
 message.cannotCancelPay=Cannot cancel payment
 message.cancelSuccess=Payment is canceled
 label.card.newName=New card name
+label.payment.report=Receipt
