--- a/src/main/resources/localization_ru_RU.properties
+++ b/src/main/resources/localization_ru_RU.properties
@@ -97,3 +97,5 @@ message.cannotChangeCardName=\u0418\u043c\u044f \u043a\u0430\u0440\u0442\u044b \
 card.changeName=\u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
 label.change=\u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c
 label.card.newName=\u041d\u043e\u0432\u043e\u0435 \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
+label.payment.report=\u041a\u0432\u0438\u0442\u0430\u043d\u0446\u0438\u044f
+
