--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -98,3 +98,5 @@ message.cannotCancelPay=Cannot cancel payment
 message.cancelSuccess=Payment is canceled
 label.card.newName=New card name
 label.payment.report=Receipt
+email.registration.text=Hello,{login}.\nCongratulations! You have successfully registered!
+message.langChange=Language is changed
