--- a/src/main/resources/localization_en_US.properties
+++ b/src/main/resources/localization_en_US.properties
@@ -58,6 +58,7 @@ role.admin=Administrator
 role.user=User
 lang.en=English
 lang.ru=Russian
+lang.ua=Ukrainian
 message.invalidCred=The credentials you are using are invalid
 message.invalidPass=Invalid password
 message.invalidEmail=Invalid email
@@ -79,6 +80,7 @@ message.cardBlocked=This card is blocked
 message.invNumber=This card number doesn't exist
 message.wrongData=Wrong CVV or PIN or expiration date
 message.numberExists=This card number already exists
+message.cardIsNotAvailable=Card isn't available
 message.invAmount=Invalid amount
 message.anotherCard=Enter another card
 message.paymentPrep=Payment is prepared
@@ -100,3 +102,7 @@ label.card.newName=New card name
 label.payment.report=Receipt
 email.registration.text=Hello,{login}.\nCongratulations! You have successfully registered!
 message.langChange=Language is changed
+label.birth=Birth
+label.fullName=Full name
+label.owner=Owner
+label.notRegistered=client is not registered
